Duplicate current workspace makes the workspace menu disappear #61274

Closed
opened 2019-02-07 10:16:42 +01:00 by Erick Tukuniata · 6 comments

System Information
Operating system: win7 gtx 550ti

Blender Version
Broken: Blender2.8 beta hash: 478be344fa
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

Short description of error

First time duplicate current workspace makes the workspace menu disappear when clicking the + button on second hit

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

With default settings:

  • Click the plus button to get the workspace menu
  • Choose Duplicate current from the workspace menu
  • Click the plus button again, notice that the menu, this time, doesn't appear, Blender duplicate the current workspace directly.
    The problem here is that when i m clicking the plus button for the second time i want the menu to pick another workspace, i don't wont to duplicate current again.
**System Information** Operating system: win7 gtx 550ti **Blender Version** Broken: Blender2.8 beta hash: 478be344fa73 (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **Short description of error** First time duplicate current workspace makes the workspace menu disappear when clicking the + button on second hit **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). With default settings: - Click the plus button to get the workspace menu - Choose Duplicate current from the workspace menu - Click the plus button again, notice that the menu, this time, doesn't appear, Blender duplicate the current workspace directly. The problem here is that when i m clicking the plus button for the second time i want the menu to pick another workspace, i don't wont to duplicate current again.

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-02-07 12:35:44 +01:00
Member

Confirmed, checking...

Confirmed, checking...
Member

caused by a7f9b57983

note: still "works" when you dont release the mouse (but keep it pressed), menu behaves normally then.
Will see if I can find a quick fix...

caused by a7f9b57983 note: still "works" when you dont release the mouse (but keep it pressed), menu behaves normally then. Will see if I can find a quick fix...

This issue was referenced by 81aa2a93e9

This issue was referenced by 81aa2a93e98951df154f57d7d6591f4e623e8c06

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61274
No description provided.