Fix T61274: duplicate current workspace makes the workspace menu disappear.

Differential Revision: https://developer.blender.org/D4321